# jinja-lsp

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
aur/: PKGBUILD  README.md
editors/vscode/: language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.test.ts  extension.ts  init-options.ts
editors/vscode/syntaxes/: jinja-html.tmLanguage.json  jinja.tmLanguage.json
editors/zed/: Cargo.toml  extension.toml
editors/zed/src/: lib.rs
scripts/: install-zed-extension.sh  package-zed-extension.sh
specs/: 01-overview.md  constitution.md  glossary.md  index.md  roadmap.md
specs/decisions/: ADR-001-language-and-runtime.md  ADR-002-tree-sitter-grammar.md  ADR-003-diagnostic-code-scheme.md  ADR-004-embedded-builtin-docs.md  ADR-005-live-config-reload.md  ADR-006-hint-file-discovery.md  ADR-007-formatting-strategy.md  ADR-008-code-action-strategy.md  ADR-009-stdio-only-transport.md  ADR-010-pypi-distribution.md
specs/features/: F00-template.md  F01-diagnostics.md  F02-builtin-registry.md  F03-extension-packs.md  F04-user-hints.md  F05-completions.md  F06-hover.md  F07-signature-help.md  F08-go-to-definition.md  F09-find-references.md  F10-symbols.md  F11-document-highlight.md  F12-folding-range.md  F13-semantic-tokens.md  F14-inlay-hints.md  F15-code-lens.md  F16-call-hierarchy.md  F17-code-actions.md  F18-formatting.md  F19-cli-linter.md  F20-editor-integrations.md  F21-release-ci.md
specs/foundations/: E01-architecture.md  E02-folder-structure.md  E03-tech-stack.md  E07-data-model.md  E15-app-config.md  E16-conventions.md  E17-testing.md  E29-e2e-testing.md  E30-extraction-and-indexing.md  E31-inline-templates.md
src/: config.rs  diagnostic.rs  error.rs  lib.rs  main.rs
src/builtins/: hints.rs  mod.rs  packs.rs  registry.rs
src/diagnostics/: filter.rs  mod.rs  noqa.rs
src/diagnostics/checks/: mod.rs
src/edit/: mod.rs
src/features/: call_hierarchy.rs  code_actions.rs  code_lens.rs  completions.rs  definition.rs  document_highlight.rs  extract_macro.rs  folding.rs  formatting.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  wrap.rs
src/format/: mod.rs
src/linter/: mod.rs
src/parsing/: discovery.rs  extractor.rs  inline.rs  mod.rs  path_resolver.rs
src/parsing/queries/: blocks.scm  call_sites.scm  caller_args.scm  extends.scm  for.scm  for_unpacking.scm  from_imports.scm  import_names.scm  imports.scm  includes.scm  macros.scm  params.scm  references.scm  set.scm  set_block.scm  trans.scm  (+2 more)
src/server/: mod.rs  state.rs
src/workspace/: builder.rs  index.rs  inline.rs  mod.rs  symbols.rs
tests/: architecture.rs  builtin_registry.rs  call_hierarchy.rs  check_runner.rs  cli.rs  cli_check.rs  cli_format.rs  code_actions.rs  code_actions_lsp.rs  code_lens.rs  completion_lsp.rs  completions.rs  config.rs  conventions.rs  data_model.rs  definition.rs  diagnostics.rs  discovery.rs  document_symbols_lsp.rs  e2e_branch_a.rs  extension_packs.rs  extract_macro.rs  extraction.rs  fold.rs  foldingrange.rs  format.rs  format_fixtures.rs  formatting.rs  goto_definition_lsp.rs  grammar.rs  highlight.rs  hover.rs  hover_lsp.rs  initialization.rs  inlay_hints.rs  inline_detection.rs  inline_regions.rs  multi_folder.rs  path_resolution.rs  performance.rs  (+17 more)
tests/e2e/: pyproject.toml
(+781 files in other folders)
