[package]
name = "jinja-lsp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[dependencies]
tower-lsp = "0.20"
tree-sitter = "0.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
tree-sitter-jinja = { git = "https://github.com/alex-oleshkevich/tree-sitter-jinja", rev = "e589222a1ad44361bc376d5abdccd08e1fecfee5" }
tree-sitter-jinja-inline = { git = "https://github.com/alex-oleshkevich/tree-sitter-jinja", rev = "e589222a1ad44361bc376d5abdccd08e1fecfee5", package = "tree-sitter-jinja-inline" }

[dev-dependencies]
insta = "1"
