[package]
# jinja-lsp is already registered on crates.io by an unrelated project
# (github.com/uros-5/jinja-lsp) — publish under this name instead. The binary
# and library keep their original names (jinja-lsp / jinja_lsp) below, so
# nothing else — CLI usage, editor configs, imports — changes.
name = "jinja-lsp-plus"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Language server for Jinja templates — diagnostics, navigation, completions, hover, and Jinja-aware formatting"
repository = "https://github.com/alex-oleshkevich/jinja-lsp"
readme = "README.md"
keywords = ["jinja", "lsp", "language-server", "templates"]
categories = ["development-tools", "template-engine"]

[lib]
name = "jinja_lsp"
path = "src/lib.rs"

[[bin]]
name = "jinja-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tree-sitter = "0.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tree-sitter-jinja = { git = "https://github.com/alex-oleshkevich/tree-sitter-jinja", rev = "e589222a1ad44361bc376d5abdccd08e1fecfee5" }
tree-sitter-jinja-inline = { git = "https://github.com/alex-oleshkevich/tree-sitter-jinja", rev = "e589222a1ad44361bc376d5abdccd08e1fecfee5", package = "tree-sitter-jinja-inline" }
similar = "2"
owo-colors = "4"

[dev-dependencies]
insta = "1"
tempfile = "3"
